# aks-store-demo

./: .dockerignore  .gitignore  .prettierrc.json  Makefile  README.md  ai-service.yaml  aks-store-all-in-one.yaml  aks-store-demo-chart-1.0.0.tgz  aks-store-demo-chart-1.1.0.tgz  aks-store-demo-chart-1.2.0.tgz  aks-store-demo-chart-1.3.0.tgz  aks-store-demo-chart-1.4.0.tgz  aks-store-demo-chart-1.4.4.tgz  aks-store-demo-chart-1.5.0.tgz  aks-store-demo-chart-1.6.0.tgz  aks-store-ingress-quickstart.yaml  aks-store-quickstart.yaml  argocd-ingress.yaml  azure-bicep.yaml  azure-build-from-source.yaml  azure.yaml  docker-compose-quickstart.yml  docker-compose.yml  grpc-service.yaml  index.yaml  rabbitmq_enabled_plugins  sonar-project.properties  test-makeline-service.http  test-order-service.http  test-product-service.http  test.http
.devcontainer/: devcontainer.json  installMoreTools.sh
.github/: copilot-instructions.md
.github/Workflows_org/: audit-bicep.yml  package-helm-chart.yaml  package-virtual-customer.yaml  package-virtual-worker.yaml  release-container-images.yaml  test-e2e-main.yaml  test-playwright.yaml
.github/workflows/: acr_build.yaml  audit-bicep.yml  audit-terraform.yml  azure-dev.yaml  azure-kubernetes-service-helm.yml  azure-kubernetes-service-kompose.yml  ci-cd.yml  helm_deploy.yaml  issue-triage-agent.lock.yml  issue-triage-agent.md  main.yml  package-ai-service.yaml  package-helm-chart.yaml  package-makeline-service.yaml  package-order-service.yaml  package-product-service-java.yaml  package-product-service.yaml  package-store-admin.yaml  package-store-back-service.yaml  package-store-front-service.yaml  saidu.yml  (+17 more)
azd-hooks/: postdeploy.ps1  postdeploy.sh  postprovision.ps1  postprovision.sh  predeploy.ps1  predeploy.sh  preprovision.ps1  preprovision.sh
docs/: azd.md  quickstart.md
infra/: .terraform.lock.hcl  cosmosdb.tf  kubernetes.tf  locals.tf  main.tf  main.tfvars.json  openai.tf  outputs.tf  variables.tf
k8s-Manifesto/: Order-Service.yaml  Product-Service.yml
kubernetes/: aks-store-ingress-quickstart.yaml  aks-store-quickstart.yaml
pythonProject1/: Dockerfile  GRPc.py  mensagem_pb2_grpc.py  requirements.txt
services/product-service/: Cargo.toml  Dockerfile  config.yml  rule_engine.wit  test-product-service.http
services/product-service/crates/sample-rule/: Cargo.toml
services/product-service/crates/second-rule/: Cargo.toml
services/product-service/crates/second-rule/src/: lib.rs
services/product-service/src/: main.rs  model.rs  startup.rs
services/product-service/src/localwasmtime/: mod.rs  rules_engine_state.rs
services/product-service/src/routes/: delete.rs  get.rs  health.rs  mod.rs
services/product-service/tests/: base_product_service.rs
simulators/virtual-customer/: Cargo.toml
src/product-service/: Cargo.toml  Dockerfile  README.md  WASM_RULES_ENGINE.md  client.py  docker-compose.yml  pom.xml  product_service.proto  server.py  test-product-service.http
src/product-service/crates/sample-rule/src/: lib.rs
src/product-service/k8s/: deployment.yaml
src/product-service/src/: app.rs  config.rs  configuration.rs  data.rs  lib.rs  main.rs  model.rs  models.rs  startup.rs
src/product-service/src/localwasmtime/: host.rs  mod.rs  rules_engine_state.rs
src/product-service/src/main/java/com/microsoft/azure/productservice/: ProductServiceApplication.java
src/product-service/src/main/java/com/microsoft/azure/productservice/config/: CorsConfig.java
src/product-service/src/main/java/com/microsoft/azure/productservice/model/: Product.java
src/product-service/src/routes/: add.rs  ai.rs  delete.rs  get.rs  health.rs  mod.rs  products.rs  update.rs
src/product-service/src/test/java/com/microsoft/azure/productservice/: ProductServiceApplicationTests.java  ProductServiceTest.java
src/product-service/tests/: base_product_service.rs  common.rs  integration.rs
src/product-service/tests/helpers/: mod.rs
src/virtual-customer/: Cargo.toml  Dockerfile  GRPc.py  README.md  docker-compose.yml  mensagem.proto  mensagem_pb2.py  mensagem_pb2_grpc.py  requirements.txt  virtual-customer-service.yaml
src/virtual-customer/src/: main.rs
tests/: README.md  TEST_CONFIG.md  load-env.js  package-lock.json  package.json  playwright.config.ts  playwright.service.config.ts  test-config.d.ts  test-config.js  test-config.ts
(+273 files in other folders)
