[package]
name = "product-service"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "product-service"

[lib]
name = "product_service"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
log = "0.4.20"
env_logger = "0.10.0"
futures-util = "0.3.28"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.72"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-15.0.0", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-15.0.0" }
ctor = "0.1.21"
