[package]
name = "product-service"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "product-service"

[lib]
name = "product_service"
path = "src/lib.rs"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
env_logger = "0.11.5"
futures-util = "0.3.30"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[dev-dependencies]
ctor = "0.2.8"
